--- a/changelog
+++ b/changelog
@@ -1,3 +1,8 @@
+9. 10. zahájena tvorba GUI, budoucnost webkamery zatím nejistá
+
+
+
+
 7. 10. přidán changelog
 
 v hodině pokusy s gimpem a úpravou obrázku sudoku
